separate and generalize parsing list of strings into diagram tree